# ir-toolkit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.config/: nextest.toml
.github/actions/build-project/: action.yaml
.github/actions/check-format/: action.yaml
.github/actions/run-tests/: action.yaml
.github/workflows/: ci.yaml  manuel-test.yaml  mdbook.yaml  release.yaml
docs/: book.toml
docs/src/: README.md  SUMMARY.md  examples.md
docs/src/usage/: acquisition.md  configuration.md  installation.md  report.md
docs/src/workflow/: function.md
docs/src/workflow/structure/: README.md  actions.md  launch_conditions.md  properties.md  report.md  variables.md  workflow.md
output/: config.yaml  run.ps1  run.sh
output/keys/: example_private.pem  example_public.pem
output/workflows/: demo_windows.yaml  example_linux.yaml  example_macos.yaml  thesis_scenario_linux.yaml  thesis_scenario_macos.yaml  thesis_scenario_windows.yaml
script/: build-linux.sh  build-macos.sh  build-windows.ps1  unused_deps.sh
src/actions/: Cargo.toml
src/actions/src/: binary.rs  command.rs  lib.rs  store.rs  terminal.rs  yara.rs
src/collector/: Cargo.toml
src/collector/src/: main.rs
src/config/: Cargo.toml
src/config/src/: config.rs  lib.rs  workflow.rs
src/crypto/: Cargo.toml
src/crypto/src/: crypto_tests.rs  lib.rs
src/keygen/: Cargo.toml
src/keygen/src/: main.rs
src/logging/: Cargo.toml
src/logging/src/: lib.rs
src/privileges/: Cargo.toml
src/privileges/src/: lib.rs  macos.rs  unix.rs  windows.rs
src/report/: Cargo.toml
src/report/src/: lib.rs
src/storage/: Cargo.toml
src/storage/src/: lib.rs
src/system/: Cargo.toml
src/system/src/: lib.rs
src/time/: Cargo.toml
src/time/src/: lib.rs
src/unpacker/: Cargo.toml
src/unpacker/src/: main.rs  unpacker_tests.rs
src/utils/: Cargo.toml
src/utils/src/: lib.rs  misc.rs  process.rs  sanitize.rs  tests.rs
src/workflow/: Cargo.toml
src/workflow/src/: handler.rs  launch_conditions.rs  runner.rs  workflow.rs
