[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
system.workspace = true
config.workspace = true
report.workspace = true
utils.workspace = true
serde_json = "1.0.117"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
hex = "0.4.3"
indicatif = "0.17.8"

[target.'cfg(target_os = "windows")'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = "0.10.64"

[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }