[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto.workspace = true
config.workspace = true
report.workspace = true
utils.workspace = true
log = "0.4.21"
chrono = "0.4.38"
chrono-tz = "0.9.0"
csv = "1.3.0"
filetime = "0.2.23"
hex = "0.4.3"
zip = "2.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[target.'cfg(target_os = "windows")'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = "0.10.64"

[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }

[dev-dependencies]
system.workspace = true