[package]
name = "unpacker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "unpacker"
path = "src/main.rs"

[dependencies]
crypto.workspace = true
report.workspace = true
storage.workspace = true
utils.workspace = true
logging.workspace = true
config.workspace = true
clap = "4.5.6"
zip = "2.0.0"
log = "0.4.21"

[dev-dependencies]
workflow.workspace = true
system.workspace = true