[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3.1"
log = "0.4.21"
sanitize-filename = "0.5.0"
hex = "0.4.3"
tokio = { version = "1.38.1", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "winnt"] }
openssl = { version = "0.10.64", features = ["vendored"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = "0.10.64"

[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }